k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    app: enhanced-ecommerce-store
